--- a/pom.xml
+++ b/pom.xml
@@ -5,8 +5,8 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>3.2.5</version>
-		<relativePath/> <!-- lookup parent from repository -->
+		<version>2.6.4</version>
+		<relativePath/>
 	</parent>
 	<groupId>com.lavajato</groupId>
 	<artifactId>LavaJato_2</artifactId>
