--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # Configuração do datasource
-spring.datasource.url=jdbc:mysql://mysql.railway.internal:3306/railway?useSSL=false
+spring.datasource.url=jdbc:mysql://root:ptpjZSfRkjEdfrhNEhVqGRAkUrsRSpUp@monorail.proxy.rlwy.net:27362/railway
 spring.datasource.username=root
 spring.datasource.password=ptpjZSfRkjEdfrhNEhVqGRAkUrsRSpUp
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
