--- a/pom.xml
+++ b/pom.xml
@@ -30,7 +30,6 @@
 			<version>8.0.28</version>
 		</dependency>
 
-
 		<!-- Spring Boot Starter for Testing -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -42,6 +41,13 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
+		</dependency>
+
+
+		<dependency>
+			<groupId>org.openjfx</groupId>
+			<artifactId>javafx-graphics</artifactId>
+			<version>17</version>
 		</dependency>
 
 	</dependencies>
