--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,9 @@
-# Configuração do datasource
 spring.datasource.url=jdbc:mysql://root:ptpjZSfRkjEdfrhNEhVqGRAkUrsRSpUp@monorail.proxy.rlwy.net:27362/railway
 spring.datasource.username=root
 spring.datasource.password=ptpjZSfRkjEdfrhNEhVqGRAkUrsRSpUp
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-# Configuração do JPA/Hibernate
+# Configurações do JPA/Hibernate
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
