--- a/pom.xml
+++ b/pom.xml
@@ -23,11 +23,11 @@
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
 
-		<!-- MySQL Connector/J -->
+		<!-- MongoDB Connector/J -->
 		<dependency>
-			<groupId>mysql</groupId>
-			<artifactId>mysql-connector-java</artifactId>
-			<version>8.0.28</version>
+			<groupId>org.mongodb</groupId>
+			<artifactId>mongodb-driver-sync</artifactId>
+			<version>4.10.2</version>
 		</dependency>
 
 		<!-- Spring Boot Starter for Testing -->
