--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,10 @@
-spring.data.mongodb.uri=mongodb+srv://<username>:<password>@<cluster>.mongodb.net/<dbname>?retryWrites=true&w=majority
+spring.datasource.url=jdbc:mysql://root:ULEYfLPDHKPNxLEDAFAMBaoqvPYrmFLS@monorail.proxy.rlwy.net:30086/railway
+spring.datasource.username=root
+spring.datasource.password=ULEYfLPDHKPNxLEDAFAMBaoqvPYrmFLS
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+logging.level.org.hibernate.SQL=DEBUG
